--- a/vignettes/Risa.Rnw
+++ b/vignettes/Risa.Rnw
@@ -18,10 +18,13 @@
 \SweaveOpts{keep.source=TRUE,eps=FALSE,include=FALSE,width=4,height=4.5} 
 
 \begin{document}
+\SweaveOpts{concordance=TRUE}
 
 \title{ Building R objects from local ISA-tab files }
 
-\author{Alejandra Gonzalez-Beltran, Steffen Neumann, Gabriella Rustici, Philippe Rocca-Serra, Audrey Kauffmann, ISA Team}
+\author{Alejandra Gonzalez-Beltran, Steffen Neumann, Audrey Kauffmann,\\
+Gabriella Rustici, ISA Team\\
+ <isatools@googlegroups.com>}
 \maketitle
 
 \section{ISA-tab format} 
@@ -70,8 +73,8 @@ These objects can then be used by downstream Bioconductor packages for data anal
 If you have your own ISA archive, you can use the function \Rfunction{isatab2bioc} to convert it into an R object.
 The arguments for the function \Rfunction{isatab2bioc} are:
 \begin{itemize}
-\item \emph{files}
-\item \emph{path}
+ \item{path}{ the name of the directory containing ISAtab files. The default is the working directory.}
+  \item{verbose}{ a boolean indicating to show messages for the different steps, if TRUE, or not to show them, if FALSE}
 \end{itemize}
 
 As an example, we can use the \emph{faahKO} dataset, whose latest version contains an ISA dataset describing the experiment. 
@@ -84,10 +87,38 @@ isaobject = isatab2bioc(find.package("faahKO"))
 
 The object \Robject{isaobject} contains the following:
 \begin{itemize}
-\item \emph{a metadata data.frame}, containing all the metadata information derived from the study file 
-\item an \Rclass{AffyBatch}, for the Affymetrix data
-\item an \Rclass{ExpressionSet}, for dual channel data
-\item an \Rclass{flowSet}, for flow cytometry data
+\item path - the path of the ISA-Tab dataset, 
+\item investigation.filename - the name of the Investigation file
+\item investigation.file - a data frame with the contents of the Investigation file
+\item study.identifiers - the list of study identifiers
+\item study.filenames - the names of the study files
+\item study.files - a list of data frames wiht the contents of the study files
+\item assay.filenames - the names of the assay files
+\item assay.filenames.per.study - the names of the assay files according to the study they belong to
+\item assay.files - a list of data frames with the contents of the assay files
+\item assay.files.per.study - a list of data frames with the contents of the assay files divided per study they belong to
+\item assay.technology.types - a list with the technology types corresponding to each assay
+\item data.filenames - a list with the names of the data files
+\item samples - a list with the names of the samples
+\item samples.per.assay.filename - the samples classified according to the assay filename they belong to
+\item assay.filenames.per.sample - the names of the assay files classified per sample name
+\item sample.to.rawdatafile 
+\item sample.to.assayname
+\item rawdatafile.to.sample
+\item assayname.to.sample
+\end{itemize}
+
+\section*{Augmenting the ISA-Tab dataset after analysis}
+
+The Risa package also provides the functionality to augment the original ISA-Tab dataset with more information after analysis. 
+
+The function \Rfunction{addAssayMetadata} allows to modify the metadata in a particular assay file.
+The arguments are:
+\begin{itemize}
+\item{isa}{ An isatab object, as retrieved by the isatab2bioc function.}
+\item{assay.filename}{ the filename of the assay file to be augmented/modified}
+\item{col.name}{ the name of the column of the assay file to be modified}
+\item{values}{ the values to be added to the column of the assay file: it could be a single value, and in this case the value is repeated across the column, or it could be a list of values (whose length must match the number of rows of the assay file) }
 \end{itemize}
 
 \section*{Session Info}
