Added method to set assay file, changed documentation

--- a/inst/doc/Risa.Rnw
+++ b/inst/doc/Risa.Rnw
@@ -98,7 +98,7 @@ library(faahKO)
 @
 
 <<Risa>>=
-faahkoISA = readISAtab(find.package("faahKO"))
+faahkoISA <- readISAtab(find.package("faahKO"))
 @
 
 The object \Robject{isaobject} contains the following elements:
@@ -258,7 +258,7 @@ For more details in a similar workflow, please refer to https://github.com/sneum
 The Risa package offers functions to write the whole ISA-Tab dataset or part of it back to disk. These functions are \Rfunction{write.isatab}, \Rfunction{write.investigation.file}, \Rfunction{write.study.file}, \Rfunction{write.assay.file}.
 
 <<Risa>>=
-write.assay.file(ISAmtbls2, a.filename)
+write.assay.file(faahkoISA, assay.filename)
 @
 
 
